fixed latest transactions column alignment issue

--- a/explorer/client/src/components/transaction-card/RecentTxCard.module.css
+++ b/explorer/client/src/components/transaction-card/RecentTxCard.module.css
@@ -7,7 +7,7 @@ div.txcardgrid h3 {
 }
 
 div.txcard {
-    @apply font-mono md:flex grid items-center bg-center shadow-sm pt-5 pb-5 h-auto border-solid border border-gray-100 pl-5 pr-5 bg-white mt-5 mb-5 text-left;
+    @apply font-mono md:flex grid items-center bg-center shadow-sm pt-5 pb-5 h-auto border-solid border border-gray-100 pl-5 pr-5 bg-white mt-5 mb-5 text-left md:justify-around;
 }
 
 div.txcardgridlarge {
@@ -15,7 +15,7 @@ div.txcardgridlarge {
 }
 
 div.txcardgrid > div {
-    @apply block;
+     @apply block;
 }
 
 div.txcardgrid > div:first-child {
@@ -24,13 +24,13 @@ div.txcardgrid > div:first-child {
 
 .txlatestesults {
     @apply w-11/12 md:w-10/12  mx-auto mb-28 mt-10 m-auto;
-
     max-width: 1200px;
 }
 
 div.txadd {
-    @apply flex md:flex-col flex-row;
+    @apply flex md:flex-col flex-row md:w-1/4 lg:w-1/3 w-auto;
 }
+
 
 .txheader {
     @apply bg-offblack text-offwhite rounded-none md:h-10 shadow-none md:flex hidden !important;
@@ -42,6 +42,10 @@ div.txadd {
 
 .txgas {
     @apply md:w-1/12 max-w-sm;
+}
+
+.txstatus{
+     @apply md:w-1/12 max-w-sm;
 }
 
 .txsearch {
